--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,33 +1,30 @@
-name: CI Pipeline
+name: 🧪 AI MedScan CI Pipeline
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [main]
   pull_request:
-    branches: [ "main" ]
+    branches: [main]
 
 jobs:
-  fastapi-test:
+  test:
+    name: 🚀 Run Tests
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: 📥 Checkout Repository
+        uses: actions/checkout@v4
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.12"
+      - name: 🐍 Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install dvc[s3]  # adjust if using other remotes like dvc[gs] or dvc[azure]
+      - name: 📦 Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Pull data from DVC
-      run: dvc pull --force
-
-
-    - name: Run only the fastapi_test stage
-      run: dvc repro fastapi_test
+      - name: ✅ Run FastAPI Tests
+        run: |
+          pytest tests/ --disable-warnings --maxfail=1
