--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest  # <-- Ensure pytest is available
+          pip install pytest httpx  # Added httpx for FastAPI TestClient
 
       - name: Run FastAPI test
         run: |
