--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,20 +11,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: "3.12"
 
-      - name: Install dependencies
-        run: |
+      - run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest httpx  # Added httpx for FastAPI TestClient
+          pip install pytest httpx
 
-      - name: Run FastAPI test
-        run: |
-          pytest tests/test_fastapi_app.py --disable-warnings --maxfail=1
+      - name: Run tests
+        env:
+          CI: "true"
+        run: pytest tests/test_fastapi_app.py --disable-warnings --maxfail=1
